HW02 edits